Modified font weight and fixed spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ a {
   font-size: 16px;
   color: #383a3c;
   line-height: 30px;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 #about {
